force-app/main/default/objects/Modulo_Jitterbit__c/Modulo_Jitterbit__c.object-meta.xml
<CustomObject>
    <label>Modulo Jitterbit</label>
    <nameField>
        <label>Nombre de Modulo Jitterbit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modulos Jitterbit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>