force-app/main/default/objects/Modulo_Jitterbit__c/fields/Codigo_SAP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP__c</fullName>
    <label>Codigo SAP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>