force-app/main/default/objects/Modulo_Jitterbit__c/fields/ConditionPricingUnit__c.field-meta.xml
<CustomField>
    <fullName>ConditionPricingUnit__c</fullName>
    <label>ConditionPricingUnit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>