force-app/main/default/objects/Modulo_Jitterbit__c/fields/Estado_Jiterrbit__c.field-meta.xml
<CustomField>
    <fullName>Estado_Jiterrbit__c</fullName>
    <label>Estado Jiterrbit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Procesado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>