force-app/main/default/objects/Modulo_Jitterbit__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <length>50</length>
    <type>Text</type>
</CustomField>