force-app/main/default/objects/Modulo_Jitterbit__c/fields/Modulo_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Modulo_de_paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modulo de paciente</label>
    <referenceTo>Modulo_de_paciente__c</referenceTo>
    <relationshipLabel>Modulos Jitterbit</relationshipLabel>
    <relationshipName>Modulos_Jitterbit</relationshipName>
    <type>Lookup</type>
</CustomField>