force-app/main/default/objects/Modulo_Jitterbit__c/fields/OtherPartnerCode__c.field-meta.xml
<CustomField>
    <fullName>OtherPartnerCode__c</fullName>
    <formula>Modulo_de_paciente__r.N_SHIP_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OtherPartnerCode</label>
    <type>Text</type>
</CustomField>