force-app/main/default/objects/Modulo_Jitterbit__c/fields/PriceCondition__c.field-meta.xml
<CustomField>
    <fullName>PriceCondition__c</fullName>
    <label>PriceCondition</label>
    <length>20</length>
    <type>Text</type>
</CustomField>