force-app/main/default/objects/Modulo_Jitterbit__c/fields/RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDeliveryDate__c</fullName>
    <formula>TEXT(YEAR(Modulo_de_paciente__r.Fecha_de_despacho__c))+

IF(MONTH(Modulo_de_paciente__r.Fecha_de_despacho__c) &lt;10,
			&apos;0&apos;+TEXT(MONTH(Modulo_de_paciente__r.Fecha_de_despacho__c)),
			    TEXT(MONTH(Modulo_de_paciente__r.Fecha_de_despacho__c)))+
 
IF(DAY(Modulo_de_paciente__r.Fecha_de_despacho__c) &lt;10,
			&apos;0&apos;+TEXT(DAY(Modulo_de_paciente__r.Fecha_de_despacho__c)),
			    TEXT(DAY(Modulo_de_paciente__r.Fecha_de_despacho__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestedDeliveryDate</label>
    <type>Text</type>
</CustomField>