force-app/main/default/objects/Modulo_Jitterbit__c/fields/ship_to__c.field-meta.xml
<CustomField>
    <fullName>ship_to__c</fullName>
    <formula>Modulo_de_paciente__r.N_SHIP_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ship to</label>
    <type>Text</type>
</CustomField>