force-app/main/default/objects/Modulo_Jitterbit__c/fields/Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Sold_to__c</fullName>
    <formula>Modulo_de_paciente__r.N_SOLD_TO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold to</label>
    <type>Text</type>
</CustomField>