force-app/main/default/objects/Modulo_Jitterbit__c/fields/SoldToYourReference__c.field-meta.xml
<CustomField>
    <fullName>SoldToYourReference__c</fullName>
    <formula>Modulo_de_paciente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SoldToYourReference</label>
    <type>Text</type>
</CustomField>